--- a/top games/style.css
+++ b/top games/style.css
@@ -56,11 +56,29 @@ caption {
     color: #4b0081;
     font-size: 35px;
 }
-th,td {
+td {
     border:solid black 2px
 
 }
 table {
     border-collapse: collapse;
     margin: auto;
+}
+.basic{
+   background-color: #fe1082
+}
+.pro{
+background-color:#0082f4 ;
+}
+.gold{
+background-color:#6500dd ;
+}
+.platinum{
+    background-color:#fba004 ;
+}
+th{
+padding:40px;
+border-radius:10px 10px 0px 0px;
+color: white;
+text-shadow: 2px 2px ;
 }
