--- a/top games/style.css
+++ b/top games/style.css
@@ -98,9 +98,22 @@ th {
 }
 
 .price {
-    box-shadow:1px 3px 5px 0px grey;
+    box-shadow: 1px 3px 5px 0px grey;
     padding: 10px;
-    border-radius: 3px; 
+    border-radius: 3px;
     width: fit-content;
-    margin: auto; 
+    margin: auto;
+}
+
+.select {
+    padding: 20px 40px;
+    width: 40%;
+    margin: 20px;
+    display: inline-block;
+    border-radius: 30px;
+    border:solid black 1px;
+    text-shadow:3px 1px 2px black;
+    box-shadow: 1px 2px 5px 0px black;
+    color: white;
+    text-decoration: none;
 }
