--- a/top games/Домашнее задание/style.css
+++ b/top games/Домашнее задание/style.css
@@ -30,15 +30,14 @@ body {
 }
 
 .menu-link {
-    border: solid black;
-    padding: 10px;
+    padding: 10px 20px;
     margin: 20px;
     display: inline-block;
     border-radius: 40px;
     color: #802804;
     font-size: 25px;
     text-decoration: none;
-    box-shadow: 3px 5px 3px 0px
+    box-shadow: 2px 2px 10px 5px
 }
 span {
     vertical-align: super;
