--- a/cinema/index.css
+++ b/cinema/index.css
@@ -26,11 +26,11 @@ h1 {
     text-decoration: none;
 }
 
-/*Sorry, but something bad happened to the color. For some reason the color remained black*/
+
 .genrename {
     margin-top: 120px;
     font-size: 40px;
-
+    color: #b0663c;
 }
 
 .films-wrapper {
@@ -38,22 +38,22 @@ h1 {
 }
 
 .filmimg {
-    width: 400px;
+    width: 100%;
 }
 
-/*Somehow these blocks with pictures just don’t fit in one line
-and the size is kind of big. And everything is stuck to the edges and there is no shadow. Horror...
-*/
+
 .filmcard {
+    display: inline-block;
+    width: 30%;
     background-color: #FDF5E6;
     border-radius: 20px;
     text-align: center;
     vertical-align: top;
     margin-top: 20px;
     margin-left: 1%;
-    box-sizing: content-box;
-    /*I'm 99% sure I chose the right property*/
-
+    box-sizing: border-box;
+    box-shadow: 5px 5px 5px 3px;
+    padding: 15px 40px 40px
 }
 
 .filmcard p {
@@ -61,13 +61,14 @@ and the size is kind of big. And everything is stuck to the edges and there is n
     display: block;
 }
 
-/*Looks like we have very sharp corners?*/
+
 .button {
     background-color: #F08080;
     width: 110px;
     text-align: center;
     margin: 0 auto;
     padding: 5px;
+    border-radius: 20px;
 
 }
 
@@ -75,7 +76,7 @@ and the size is kind of big. And everything is stuck to the edges and there is n
     margin-top: 80px;
     color: #800000;
     font-size: 40px;
-
+    text-align: center;
 }
 
 caption {
@@ -83,14 +84,14 @@ caption {
     margin: 10px;
 }
 
-/*Does the table seem to have to be centered or not? Also, in the template, the cells are located together, and not separately.
-*/
+
 table {
     width: 60%;
     text-align: center;
     font-size: 20px;
     background-color: #FDF5E6;
-
+    margin: auto;
+    border-collapse: collapse;
 }
 
 th {
