--- a/harry potter/Домашнее задание/style.css
+++ b/harry potter/Домашнее задание/style.css
@@ -1,6 +1,6 @@
 .paper {
     width: 900px;
-    background-color: #e6e0d9;
+    background-color: #f5f8fd;
     margin: auto;
     padding: 30px;
 }
@@ -8,7 +8,7 @@
 .header {
     height: 160px;
     width: 100%;
-    background-image: url("img/pic0.png");
+    background-image: url("img/pic0.PNG");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -16,8 +16,9 @@
 
 .sub-header {
     height: 85px;
-    background-image: url("Img/paper-sub-head.PNG");
+    background-image: url("Img/pic3.PNG");
     background-size: cover;
+    background-position: center;
 }
 
 .article-container {
@@ -29,26 +30,8 @@
 
 img {
     float: right;
-    opacity: 0.7;
+    opacity: 1;
     margin: 5px;
-}
-
-h1 {
-    font-family: "Berkshire Swash", serif;
-    font-size: 70px;
-    text-align: center;
-    text-shadow: 0px 6px 5px;
-}
-
-p {
-    font-family: "Henny Penny", system-ui;
-}
-
-h2 {
-    font-family: "Berkshire Swash", serif;
-    font-size: 35px;
-    text-align: center;
-    text-shadow: 0px 4px 5px;
 }
 
 .column {
